<resources>
    <string name="app_name">MyAppPortFolio</string>
    <string name="action_settings">Settings</string>
    <string name="header">My Nanodegree Apps!</string>
    <string name="button_1">SPOTIFY STREAMER</string>
    <string name="button_2">SCORES APP</string>
    <string name="button_3">LIBRARY APP</string>
    <string name="button_4">BUILD IT BIGGER</string>
    <string name="button_5">XYZ READER</string>
    <string name="button_6">CAPSTONE:MY OWN APP</string>
</resources>
